# AndroidSamples

./: README.md  android.txt  android.xml  build.gradle  helloword.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/beancurd/androidsamples/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/beancurd/androidsamples/: HomeActivity.java  MainActivity.kt  MyApp.kt
app/src/main/java/com/beancurd/androidsamples/util/: PcmToMp3.java  (+5 more)
app/src/main/res/layout/: activity_home.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/beancurd/androidsamples/: AESDecrypt.java  ExampleUnitTest.kt  Hello.kt
buildSrc/: build.gradle
buildSrc/src/main/java/com/beancurdv/buildsrc/: GreetingPluginV2.java  HelloWorld.kt  MyClass.kt
gradle/wrapper/: gradle-wrapper.properties
kadvance/: build.gradle
kadvance/src/androidTest/java/com/beancurd/kadvance/: ExampleInstrumentedTest.kt
kadvance/src/main/java/com/beancurd/kadvance/: Sample01.kt  Sample02.kt  Simple03.kt  lamda001.kt
kadvance/src/test/java/com/beancurd/kadvance/: ExampleUnitTest.kt
nativelib/: build.gradle.kts
nativelib/src/androidTest/java/com/beancurdv/nativelib/: ExampleInstrumentedTest.kt
nativelib/src/main/cpp/: CMakeLists.txt  lamemp3_cpp.cpp  nativelib.cpp
nativelib/src/main/cpp/libmp3lame/: util.h
nativelib/src/main/java/com/beancurdv/nativelib/: LameUtil.java  NativeLib.kt  PcmToMp3.kt
nativelib/src/test/java/com/beancurdv/nativelib/: ExampleUnitTest.kt
(+1 files in other folders)
